# backend/src/routes/routes.ts
@@ -615,7 +615,7 @@ export function RegisterRoutes(app: Router) {
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
         const argsUserController_login: Record<string, TsoaRoute.ParameterSchema> = {
-                body: {"in":"body","name":"body","required":true,"dataType":"nestedObjectLiteral","nestedProperties":{"biometricToken":{"dataType":"string"},"entity":{"dataType":"double"},"password":{"dataType":"string","required":true},"email":{"dataType":"string","required":true}}},
+                body: {"in":"body","name":"body","required":true,"dataType":"nestedObjectLiteral","nestedProperties":{"generateBiometricToken":{"dataType":"boolean","required":true},"biometricToken":{"dataType":"string"},"entity":{"dataType":"double"},"password":{"dataType":"string","required":true},"email":{"dataType":"string","required":true}}},
         };
         app.post('/users/login',
             ...(fetchMiddlewares<RequestHandler>(UserController)),
